# 3D-MPM-residual-cnn-lightweight-attention

./: README.md  pyproject.toml
mpm3d_lam/: __init__.py  config.py  model.py  patches.py  scaling.py
tests/: test_model.py  test_patches.py  test_scaling.py
