[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpm3d-lam"
version = "0.1.0"
description = "3D Mineral Prospectivity Mapping with Residual CNN and Lightweight Attention"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.22",
    "torch>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[tool.setuptools.packages.find]
include = ["mpm3d_lam*"]
